# inverse_projection_visual_analytics

./: .gitignore  Jacobian_estimation.ipynb  Jacobian_estimation_perplexity.ipynb  Jacobian_estimation_perplexity.py  Jacobian_numerical_symbolic_testing.ipynb  Jacobian_testing.ipynb  LICENSE  NNinv.ipynb  NNinv_LLE.ipynb  NNinv_pca.ipynb  NNinv_tsne.ipynb  NNinv_umap.ipynb  README.md  __init__.py  backup_decision_boundaries_tsne_umap.py  datasets.py  decision_boundaries_shinny.py  discreteFTLE.ipynb  distance_delanay_compare_selected_box.py  distance_delanay_compare_selected_box_more_codes.py  distance_delanay_compare_sub_delanay.py  distance_delanay_cr_box.py  distance_delanay_cr_edges.py  distance_delanay_cr_line_curve.py  distance_delanay_cr_point.py  inver_project_model.py  inverse_model.pth  ipynb_topy.py  jacobian_estim.py  jacobian_estimation_IRIS.ipynb  main.py  main_analyze_proj_quality.py  main_unspervised.py  pca_analysis.py  perplexity_analysis copy 2.py  perplexity_analysis.ipynb  perplexity_analysis.py  perplexity_analysis_main.py  plot_caclualting_distance_each_data.py  plots.py  (+11 more)
zadu_measure/: __init__.py  average_local_error.py  class_aware_trustworthiness_continuity.py  clustering_and_external_validation_measure.py  distance_consistency.py  distance_to_measure.py  internal_validation_measure.py  kl_divergence.py  label_trustworthiness_and_continuity.py  local_continuity_meta_criteria.py  mean_relative_rank_error.py  neighbor_dissimilarity.py  neighborhood_hit.py  neighborhood_preservation_precision.py  non_metric_stress.py  pearson_r.py  perplexity_quality_score.py  procrustes.py  projection_precision_score.py  scale_normalized_stress.py  spearman_rho.py  steadiness_cohesiveness.py  stress.py  (+2 more)
