[tool.poetry]
name = "inverse-projection"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
notebook = "^7.2.2"
ipykernel = "^6.29.5"
numpy = "^2.0"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
pyqt6 = "^6.7.1"
torch = "^2.5.0"
numba = "^0.60.0"
umap-learn = "^0.5.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
